--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jose==1.0.0
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -23,6 +24,7 @@ pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+PyJWT==2.10.1
 pymongo==4.14.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
