--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2025.8.3
 cffi==1.17.1
 click==8.2.1
 cryptography==45.0.6
-dnspython
+dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
